--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/public/favicon.ico">
+    <link rel="icon" type="image/png" href="public/favicon.ico">
     <style>
         /* Root variables */
         :root {
@@ -18,7 +18,7 @@
 
         /* Base styles */
         body {
-            background-image: url(/public/Background_rainforest.jpeg);
+            background-image: url(public/Background_rainforest.jpeg);
             background-attachment: fixed;
             color: white;
         }
@@ -435,7 +435,7 @@
     <!-- Hero Section -->
     <header class="video-hero">
         <video class="video-background" autoplay muted playsinline>
-            <source src="/public/background-video.mp4" type="video/mp4">
+            <source src="public/background-video.mp4" type="video/mp4">
         </video>
         <div class="video-overlay animated-on-scroll"></div>
         </div>
@@ -743,55 +743,55 @@
             { 
                 name: 'Blackhead CB23', 
                 description: 'Kuningaspyton (Python regius)',
-                image: '/public/Coming-soon.jpg',
+                image: 'public/Coming-soon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Banana CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: '/public/Bananay24c1b2001.jpg',
+                image: 'public/Bananay24c1b2001.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Blackhead CB23',
                 description: 'Kuningaspyton (Python regius)',
-                image: '/public/Coming-soon.jpg',
+                image: 'public/Coming-soon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Pinstripe CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: '/public/pinstripe.jpg',
+                image: 'public/pinstripe.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Yellowbelly CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: '/public/yellowbelly.jpg',
+                image: 'public/yellowbelly.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Blackhead CB23', 
                 description: 'Kuningaspyton (Python regius)',
-                image: '/public/Coming-soon.jpg',
+                image: 'public/Coming-soon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Special CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: '/public/Specialy24c1b4002.jpg',
+                image: 'public/Specialy24c1b4002.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Special CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: '/public/Specialy24c1b5002.jpg',
+                image: 'public/Specialy24c1b5002.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Normal CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: '/public/Normaly24c1b7003.jpg',
+                image: 'public/Normaly24c1b7003.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
@@ -809,7 +809,7 @@
             { 
                 name: 'Banana CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: '/public/Bananay24c1b3003.jpg',
+                image: 'public/Bananay24c1b3003.jpg',
                 email: 'grovesroyals@gmail.com'
             },
 
