--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="./public/video/favicon.ico">
+    <link rel="icon" type="image/png" href="video/favicon.ico">
     <style>
         /* Root variables */
         :root {
@@ -18,7 +18,7 @@
 
         /* Base styles */
         body {
-            background-image: url(./public/video/backgroundrainforest.jpeg);
+            background-image: url(video/backgroundrainforest.jpeg);
             background-attachment: fixed;
             color: white;
         }
@@ -74,7 +74,7 @@
 
         /* Hero section */
         .hero-section {
-            background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.0)), url('/api/placeholder/1500/800');
+            background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.0)), url('video/backgroundrainforest.jpeg');
             background-size: cover;
             background-position: center;
         }
@@ -435,7 +435,7 @@
     <!-- Hero Section -->
     <header class="video-hero">
         <video class="video-background" autoplay muted playsinline>
-            <source src="./public/video/backgroundvideo.mp4" type="video/mp4">
+            <source src="video/backgroundvideo.mp4" type="video/mp4">
         </video>
         <div class="video-overlay animated-on-scroll"></div>
         </div>
@@ -743,73 +743,73 @@
             { 
                 name: 'Blackhead CB23', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './public/images/comingsoon.jpg',
+                image: 'images/comingsoon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Banana CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './public/images/bananay24c1b2001.jpg',
+                image: 'images/bananay24c1b2001.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Blackhead CB23',
                 description: 'Kuningaspyton (Python regius)',
-                image: './public/images/comingsoon.jpg',
+                image: 'images/comingsoon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Pinstripe CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './public/images/pinstripe.jpg',
+                image: 'images/pinstripe.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Yellowbelly CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './public/images/yellowbelly.jpg',
+                image: 'images/yellowbelly.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Blackhead CB23', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './public/images/comingsoon.jpg',
+                image: 'images/comingsoon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Special CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './public/images/specialy24c1b4002.jpg',
+                image: 'images/specialy24c1b4002.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Special CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './public/images/specialy24c1b5002.jpg',
+                image: 'images/specialy24c1b5002.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Normal CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './public/images/normaly24c1b7003.jpg',
+                image: 'images/normaly24c1b7003.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Normal CB24', 
                 description: 'Viljakäärme (Pantherophis guttatus)',
-                image: './public/images/normalcorn.jpg',
+                image: 'images/normalcorn.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Sunkissed CB24', 
                 description: 'Viljakäärme (Pantherophis guttatus)',
-                image: './public/images/sunkissed.jpg',
+                image: 'images/sunkissed.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Banana CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './public/images/bananay24c1b3003.jpg',
+                image: 'images/bananay24c1b3003.jpg',
                 email: 'grovesroyals@gmail.com'
             }
 
