--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="./video/favicon.ico">
+    <link rel="icon" type="image/png" href="https://github.com/ToniMarkusLehtonen/GR_web/tree/main/video/favicon.ico">
     <style>
         /* Root variables */
         :root {
@@ -18,7 +18,7 @@
 
         /* Base styles */
         body {
-            background-image: url(./video/backgroundrainforest.jpeg);
+            background-image: url(https://github.com/ToniMarkusLehtonen/GR_web/tree/main/video/backgroundrainforest.jpeg);
             background-attachment: fixed;
             color: white;
         }
@@ -74,7 +74,7 @@
 
         /* Hero section */
         .hero-section {
-            background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.0)), url('./video/backgroundrainforest.jpeg');
+            background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.0)), url('https://github.com/ToniMarkusLehtonen/GR_web/tree/main/video/backgroundrainforest.jpeg');
             background-size: cover;
             background-position: center;
         }
@@ -435,7 +435,7 @@
     <!-- Hero Section -->
     <header class="video-hero">
         <video class="video-background" autoplay muted playsinline>
-            <source src="./video/backgroundvideo.mp4" type="video/mp4">
+            <source src="https://github.com/ToniMarkusLehtonen/GR_web/tree/main/video/backgroundvideo.mp4" type="video/mp4">
         </video>
         <div class="video-overlay animated-on-scroll"></div>
         </div>
@@ -743,73 +743,79 @@
             { 
                 name: 'Blackhead CB23', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './images/comingsoon.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/comingsoon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Banana CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './images/bananay24c1b2001.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/bananaa.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Blackhead CB23',
                 description: 'Kuningaspyton (Python regius)',
-                image: './images/comingsoon.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/comingsoon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Pinstripe CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './images/pinstripe.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/pinstripe.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Yellowbelly CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './images/yellowbelly.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/yellowbelly.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Blackhead CB23', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './images/comingsoon.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/comingsoon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Special CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './images/specialy24c1b4002.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/speciala.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Special CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './images/specialy24c1b5002.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/specialb.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Normal CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './images/normaly24c1b7003.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/normalpyton.jpg',
+                email: 'grovesroyals@gmail.com'
+            },
+            {
+                name: 'Normal CB24', 
+                description: 'Kuningaspyton (Python regius)',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/normalbpyton.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Normal CB24', 
                 description: 'Viljakäärme (Pantherophis guttatus)',
-                image: './images/normalcorn.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/normalcorn.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Sunkissed CB24', 
                 description: 'Viljakäärme (Pantherophis guttatus)',
-                image: './images/sunkissed.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/sunkissed.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Banana CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: './images/bananay24c1b3003.jpg',
+                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/bananab.jpg',
                 email: 'grovesroyals@gmail.com'
             }
 
@@ -1042,79 +1048,79 @@
     function generatePhotoGallery() {  
         // Gallery images
         const galleryImages = [
-            {   src:'public/photoGallery/Kuningaspyton.webp',
+            {   src:'photoGallery/Kuningaspyton.webp',
                 species: 'Kuningaspyton (Python regius)'
             }, 
-            {   src:'public/photoGallery/Boaimperator.jpg',
+            {   src:'photoGallery/Boaimperator.jpg',
                 species: 'Väliamerikan Boa (Boa imperator)'
             },
-            {   src:'public/photoGallery/Burmanpyton.jpg',
+            {   src:'photoGallery/Burmanpyton.jpg',
                 species: 'Burmanpyton (Python bivittatus)'
             },
-            {   src:'public/photoGallery/Verkkopyton.jpg',
+            {   src:'photoGallery/Verkkopyton.jpg',
                 species: 'Verkkopyton (Malayopython reticulatus)'
             },
-            {   src:'public/photoGallery/Viljakäärme.jpg',
+            {   src:'photoGallery/Viljakäärme.jpg',
                 species: 'Viljakäärme (Pantherophis guttatus)'
             },
-            {   src:'public/photoGallery/Caribena.jpg',
+            {   src:'photoGallery/Caribena.jpg',
                 species: 'Caribena Versicolor tarantula'
             },
-            {   src:'public/photoGallery/Cromatopelma.jpg',
+            {   src:'photoGallery/Cromatopelma.jpg',
                 species: 'Cromatopelma cyaneopubescens tarantula'
             },
-            {   src:'public/photoGallery/Argentiinantorakka.jpg',
+            {   src:'photoGallery/Argentiinantorakka.jpg',
                 species: 'Argentiinantorakka (Blaptica dupia)'
             },
-            {   src:'public/photoGallery/Arizonablonde.jpg',
+            {   src:'photoGallery/Arizonablonde.jpg',
                 species: 'Arizona blonde tarantula'
             },
-            {   src:'public/photoGallery/Davus.jpg',
+            {   src:'photoGallery/Davus.jpg',
                 species: 'Davus Pentaloris tarantula'
             },
-            {   src:'public/photoGallery/Gigas.jpg',
+            {   src:'photoGallery/Gigas.jpg',
                 species: 'Archispirostreptus gigas'
             },
-            {   src:'public/photoGallery/Grap.jpg',
+            {   src:'photoGallery/Grap.jpg',
                 species: 'Punasaksitaskurapu (Perisesarma bidens)'
             },
-            {   src:'public/photoGallery/Harjasgekko.jpg',
+            {   src:'photoGallery/Harjasgekko.jpg',
                 species: 'Harjasgekko (Rhacodactylus ciliatus)'
             },
-            {   src:'public/photoGallery/Jättilehtitorakka.jpg',
+            {   src:'photoGallery/Jättilehtitorakka.jpg',
                 species: 'Jättilehtitorakka'
             },
-            {   src:'public/photoGallery/Meksikonpunapolvi.jpg',
+            {   src:'photoGallery/Meksikonpunapolvi.jpg',
                 species: 'Meksikonpunapolvi tarantula (Brachypelma hamorii)'
             },
-            {   src:'public/photoGallery/Nhandu.jpg',
+            {   src:'photoGallery/Nhandu.jpg',
                 species: 'Nhandu chromatus tarantula'
             },
-            {   src:'public/photoGallery/Phorpus.jpg',
+            {   src:'photoGallery/Phorpus.jpg',
                 species: 'Phormictopus SP. sierra tarantula'
             },
-            {   src:'public/photoGallery/Sepi.jpg',
+            {   src:'photoGallery/Sepi.jpg',
                 species: 'Sfinx (Canadian hairless)'
             },
-            {   src:'public/photoGallery/Coming-soon.jpg',
+            {   src:'photoGallery/Coming-soon.jpg',
                 species: 'Grammostola pulchra tarantula'
             },
-            {   src:'public/photoGallery/Coming-soon.jpg',
+            {   src:'photoGallery/Coming-soon.jpg',
                 species: 'Grammostola pulchripes tarantula'
             },
-            {   src:'public/photoGallery/Coming-soon.jpg',
+            {   src:'photoGallery/Coming-soon.jpg',
                 species: 'Cyriopagopus sp. "Sumatran tiger" tarantula'
             },
-            {   src:'public/photoGallery/Coming-soon.jpg',
+            {   src:'photoGallery/Coming-soon.jpg',
                 species: 'Psalmopoeus irminia tarantula'
             },
-            {   src:'public/photoGallery/Coming-soon.jpg',
+            {   src:'photoGallery/Coming-soon.jpg',
                 species: 'Homoeomma chilensis'
             },
-            {   src:'public/photoGallery/Coming-soon.jpg',
+            {   src:'photoGallery/Coming-soon.jpg',
                 species: 'Lasiocyano sazimai'
             },
-            {   src:'public/photoGallery/Coming-soon.jpg',
+            {   src:'photoGallery/Coming-soon.jpg',
                 species: 'Brachypelma emilia'
             },
         ];
