--- a/GR_web/index.html
+++ b/GR_web/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fleur+De+Leah&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="https://github.com/ToniMarkusLehtonen/GR_web/tree/main/video/favicon.ico">
+    <link rel="icon" type="image/png" href="./video/favicon.ico">
     <style>
         /* Root variables */
         :root {
@@ -18,7 +18,7 @@
 
         /* Base styles */
         body {
-            background-image: url(https://github.com/ToniMarkusLehtonen/GR_web/tree/main/video/backgroundrainforest.jpeg);
+            background-image: url(./video/backgroundrainforest.jpg);
             background-attachment: fixed;
             color: white;
         }
@@ -74,7 +74,7 @@
 
         /* Hero section */
         .hero-section {
-            background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.0)), url('https://github.com/ToniMarkusLehtonen/GR_web/tree/main/video/backgroundrainforest.jpeg');
+            background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.0));
             background-size: cover;
             background-position: center;
         }
@@ -435,7 +435,7 @@
     <!-- Hero Section -->
     <header class="video-hero">
         <video class="video-background" autoplay muted playsinline>
-            <source src="https://github.com/ToniMarkusLehtonen/GR_web/tree/main/video/backgroundvideo.mp4" type="video/mp4">
+            <source src="./video/backgroundvideo.mp4" type="video/mp4">
         </video>
         <div class="video-overlay animated-on-scroll"></div>
         </div>
@@ -743,79 +743,79 @@
             { 
                 name: 'Blackhead CB23', 
                 description: 'Kuningaspyton (Python regius)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/comingsoon.jpg',
+                image: './images/Comingsoon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Banana CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/bananaa.jpg',
+                image: './images/Bananaa.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Blackhead CB23',
                 description: 'Kuningaspyton (Python regius)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/comingsoon.jpg',
+                image: './images/Comingsoon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Pinstripe CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/pinstripe.jpg',
+                image: './images/Pinstripe.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Yellowbelly CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/yellowbelly.jpg',
+                image: './images/Yellowbelly.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Blackhead CB23', 
                 description: 'Kuningaspyton (Python regius)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/comingsoon.jpg',
+                image: './images/Comingsoon.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Special CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/speciala.jpg',
+                image: './images/Speciala.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Special CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/specialb.jpg',
+                image: './images/Specialb.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Normal CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/normalpyton.jpg',
+                image: './images/Normalpyton.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             {
                 name: 'Normal CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/normalbpyton.jpg',
+                image: './images/Normalbpyton.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Normal CB24', 
                 description: 'Viljakäärme (Pantherophis guttatus)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/normalcorn.jpg',
+                image: './images/Normalcorn.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Sunkissed CB24', 
                 description: 'Viljakäärme (Pantherophis guttatus)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/sunkissed.jpg',
+                image: './images/Sunkissed.jpg',
                 email: 'grovesroyals@gmail.com'
             },
             { 
                 name: 'Banana CB24', 
                 description: 'Kuningaspyton (Python regius)',
-                image: 'https://github.com/ToniMarkusLehtonen/GR_web/tree/main/images/bananab.jpg',
+                image: './images/Bananab.jpg',
                 email: 'grovesroyals@gmail.com'
             }
 
